<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textCapSentences"
        app:layout_constraintStart_toStartOf="@+id/etLat"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <EditText
        android:id="@+id/etLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvOffset"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etLat"
        app:layout_constraintTop_toBottomOf="@+id/etLat" />

    <TextView
        android:id="@+id/tvOffsetValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/strDefZero"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        app:layout_constraintEnd_toEndOf="@+id/etLong"
        app:layout_constraintStart_toStartOf="@+id/etLong"
        app:layout_constraintTop_toBottomOf="@+id/etLong" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/strLookup"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etName"
        android:text="@string/strName"
        app:layout_constraintBaseline_toBaselineOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="@+id/tvOffset"
        app:layout_constraintStart_toStartOf="@+id/tvOffset" />

    <TextView
        android:id="@+id/tvLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etLat"
        android:text="@string/strLat"
        app:layout_constraintBaseline_toBaselineOf="@+id/etLat"
        app:layout_constraintEnd_toEndOf="@+id/tvOffset"
        app:layout_constraintStart_toStartOf="@+id/tvOffset" />

    <TextView
        android:id="@+id/tvLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etLong"
        android:text="@string/strLong"
        app:layout_constraintBaseline_toBaselineOf="@+id/etLong"
        app:layout_constraintEnd_toEndOf="@+id/tvOffset"
        app:layout_constraintStart_toStartOf="@+id/tvOffset" />

    <TextView
        android:id="@+id/tvOffset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:labelFor="@id/tvOffsetValue"
        android:text="@string/strOffset"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvOffsetValue"
        app:layout_constraintEnd_toStartOf="@+id/tvHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/sbOffset"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:max="26"
        android:progress="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOffset" />

    <Button
        android:id="@+id/btnSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="saveToFile"
        android:text="@string/strSet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbOffset" />

</android.support.constraint.ConstraintLayout>